# oidc-cli

./: CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  REQ.md  TODO.md
.github/workflows/: ci.yaml  release.yaml
assets/: simple-example-use.webm
src/: browser.rs  cli.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  server.rs
src/auth/: discovery.rs  mod.rs  oauth.rs  pkce.rs
src/commands/: import_export.rs  login.rs  mod.rs  profile.rs
src/profile/: manager.rs  mod.rs  storage.rs  validation.rs
src/templates/: error.html  generic_error.html  success.html
src/ui/: display.rs  manual_entry.rs  mod.rs  prompts.rs
src/utils/: url.rs
tests/: main_tests.rs  server_tests.rs
tests/common/: mod.rs
