[package]
name = "oidc-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
clipboard = ["dep:clipboard"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
dirs = "5.0"
webbrowser = "0.8"
hyper = { version = "0.14", features = ["full"] }
urlencoding = "2.1"
anyhow = "1.0"
thiserror = "1.0"
clipboard = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3.0"
