[package]
name = "oidc-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
clipboard = ["dep:clipboard"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
dirs = "5.0"
webbrowser = "0.8"
hyper = { version = "0.14", features = ["full"] }
urlencoding = "2.1"
anyhow = "1.0"
thiserror = "1.0"
clipboard = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.test]
inherits = "dev"
debug = 0        # This will be overridden by CARGO_PROFILE_TEST_DEBUG env var

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = "symbols"        # Remove symbols for smaller binaries

[profile.ci]
inherits = "dev"
debug = false
debug-assertions = true
overflow-checks = true
incremental = false     # Better for CI caching
codegen-units = 4       # Balance between parallelism and optimization
opt-level = 1           # Some optimization without too much compile time cost
